--- a/css/media.css
+++ b/css/media.css
@@ -71,7 +71,111 @@
 @media (max-width: 684px) {}
 
 /* mobile < 576 */
-@media (max-width: 576px) {}
+@media (max-width: 576px) {
+    .container {
+        max-width: 526px;
+        width: 100%;
+        margin: auto;
+    }
+    .d-flex {
+        display: flex;
+        align-items: center;
+    }
+    .hero-d-flex {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .all-btn {
+        width: 190px;
+        height: 60px;
+    }
+    .site-hero__info {
+        max-width: 526px;
+        width: 100%;
+    }
+    .site-hero__title {
+        max-width: 526px;
+        width: 100%;
+        font-size: 48px;
+        font-weight: 900;
+        line-height: 48px;
+        text-align: center;
+    }
+    .site-hero__text {
+        max-width: 527px;
+        width: 100%;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 26px;
+        text-align: center;
+    }
+    .hero-btn {
+        display: flex;
+        justify-content: space-between;
+    }
+    .site-hero__image {
+        width: 526px;
+    }
+    .mechanical-d__flex {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .mechanical-card_image {
+        width: 210px;    
+    }
+    .mechanical-card_imag{
+        width: 290px;
+        border-radius: 10px;
+    }
+    .box {
+        width: 210px;
+    }
+    .mechanical-card__img {
+        display: flex;
+        column-gap: 20px;
+    }
+    .mechanical-info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: auto;
+        padding-top: 50px;
+        row-gap: 24px;
+    }
+    .mechanical-title {
+        width: 500px;
+        text-align: center;
+    }
+    .mechanical-text {
+        width: 500px;
+        text-align: center;
+    }
+    .icon-cards {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: auto;
+    }
+    .icon-title {
+        width: 490px;
+        font-size: 30px;
+        font-weight: 900;
+        line-height: 38px;
+        padding-top: 48px;
+        text-align: center;
+    }
+    .icon-text {
+        width: 470px;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 26px;
+        text-align: center;
+        padding-bottom: 64px;
+    }
+    .footer-text {
+        width: 272px;
+    }
+}
 
 @media (max-width: 480px) {}
 
